--- a/physics/thermodynamics.tex
+++ b/physics/thermodynamics.tex
@@ -11,21 +11,110 @@
     \tableofcontents
 
     \chapter{熱力学とは}
-        Part（部）の見出し
-        \section{hoge1csacas}
-            This is sample.This is sample.This is sample.This is sample.This is sample.This is sample.This is sample. \par
-            csajcaj
-            \begin{equation}
-                X(T; V, N) \xrightarrow{\text{i.q.}} X'(T; V', N)
-            \end{equation}
-    
+        \section{熱力学という学問}
+        このPDFがあらかた完成してから書くと思う
+            
+        \section{熱力学的現象の見方}
+
+            \subsection*{仕事}
+                熱力学では、力学的な操作と紐付けた理論が構築されている。
+                例えば、系に対して仕事をすれば内部エネルギーが上昇する現象などのようなものがそれに該当する。\par
+                唐突ではあるが、天下り的に状態方程式について考える。力学的な仕事に直接的な関係がある圧力$P$について解くと、
+                \begin{equation}
+                    p = \frac{NRT}{V}
+                \end{equation}
+                となる。これは理想機体に適用される式なので、熱力学的現象全般に対して適用できるものではないが、力学的な量（今回は圧力$P$）は体積$V$、物質量$N$、絶対温度$T$が密接に関わっていることを直感的に理解してもらえると思う。
+                ここから先、系の状態を記述する際にキーとなるパラメータは、ここで挙げた３つになる。
+
+            \subsection*{示量変数と示強変数}
+                体積$V$や物質量$N$のような物理量は、その熱力学的な系の\textbf{量}を示すパラメータであるため\textbf{示量変数}と呼ばれる。
+                それに対して、絶対温度$T$のような物理量は、系の\textbf{強度}を示すパラメータであるため\textbf{示強変数}と呼ばれる。\par
+                熱力学的な系の状態を表現する記法として、以後$(T; V, N)$や$(T; X),X=(V, N)$のようにセミコロンの左側に示強変数、右側に示量変数を並べるような記法で表現することにする。\par
+                先ほど挙げた２つの変数の違いを直感的に理解するために具体例をひとつ提示する。
+                お湯と冷えた水を用意し、お湯は$(T_1; V_1, N_1)$、水は$(T_2; V_2, N_2)$とする。
+                ここで、２つの液体を混ぜ合わせるとそれぞれの物理量はどうなるだろうか。
+                \begin{equation}
+                    V = V_1 + V_2
+                \end{equation}   
+                \begin{equation}
+                    N = N_1 + N_2
+                \end{equation}   
+                \begin{equation}
+                    T \ne T_1 + T_2
+                \end{equation}   
+                体積$V$や物質量$N$のような示量変数のみ相加性を持つことがわかる。
+                この違いは現象を解析していく上で、大変重要な違いである。
+            
+            \subsection*{平衡状態}
+                平衡状態を簡潔に表現すると、自発的な状態の変化がなくなった状態のことである。
+                熱力学では、平衡状態間での変化を取り扱うため、考えている系が平衡かどうかをチェックすることは非常に重要である。 
+
+            \subsection*{最大仕事}
+                次のチャプターでも言及するが、仕事の値は始状態と終状態が同じだとしても一意に定まるわけではない。
+                外界から仕事をすることで、$(T; X)\xrightarrow{}(T'; X')$に状態を変化させるとしても、そのさせ方によって終状態は変わってくる。
+                イメージとしては、腕立てを一回するという動作について考えてみたいのだが、「腕を伸ばした状態から腕を曲げることで体を落としていき、その後元の状態に戻す」表現しておく。
+                始状態と終状態は同じ腕を伸ばした状態であるが、腕立て一回の速さによって腕への負担は変わってくる。
+                つまり、変化のさせ方によって仕事の値は変わってきてしまうということである。
+
+            \subsection*{準静的過程}   
+                系の状態を変化させる際に、その変化速度が極限的に$0$の場合、その操作のことを\textbf{準静的操作}という。
+                噛み砕いて言うと、極限までゆっくり変化させていくということである。
+                これはすなわち、平衡状態を保ったまま変化させることに対応し、理論を組み立てていく上で重要な仮定になる。
 
     \chapter{等温操作}
 
+        \section{等温操作とは}
+            \subsection*{等温操作}
+                等温操作とは、系が温度一定の環境下で変化させることである。
+                つまり、以下のような温度が一定の操作のことである。
+                \begin{equation}
+                    (T; X)\xrightarrow{}(T; X')
+                \end{equation}
+                ただひとつ注意として、環境が等温なだけで、考えている系が常に等温なわけではない。
+                始状態と終状態が環境の温度と等しければ、それは等温操作となる。
+                
+        \section{ケルヴィンの定理}
+                               
+            \subsection*{ケルヴィンの定理（熱力学第二法則）}
+                ある状態$(T; X)$から状態を変化させていき、最終的に$(T; X)$に帰ってくるような\textbf{等温サイクル}を考える。
+                このサイクルで系が外部にする仕事$W_{cyc}$について、
+                \begin{equation}
+                    W_{cyc} \le 0
+                \end{equation}
+                が成り立つ。これを\textbf{ケルヴィンの定理}といい、これは\textbf{熱力学第二法則}と同値な表現である。
+                この原理の主張は、\textbf{等温サイクルにおいて、系が外界に正の仕事をすることはない}ということである。
+                これは、第二種永久機関が存在しないことを表している。
+
+
+        \section{ヘルムホルツの自由エネルギー}
+
+            \subsection*{最大仕事の原理}
+                始状態を$(T; X)$、終状態を$(T; X')$とするとき、仕事の値は変化のさせ方に依存するので一意には定まらないが、仕事の最大値(\textbf{最大仕事})は一意に定まる。
+                この最大仕事は、\textbf{等温準静操作で系が外界にする仕事}に等しい。
+
+            \subsection*{ヘルムホルツの自由エネルギーの定義}
+
+            \subsection*{圧力の定義}
+            
+
+    \begin{equation}
+        X(T; V, N) \xrightarrow{\text{i.q}} X'(T; V', N)
+    \end{equation}     
+
 
     \chapter{断熱操作}
-    
-    
+
+    \section{断熱操作とは}
+            \subsection*{断熱操作とは}
+                
+    \section{エネルギー保存則}
+                            
+        \subsection*{エネルギー保存則（熱力学第一法則）}
+
+        \subsection*{断熱仕事}
+
+        \subsection*{定積熱容量}
+
     \chapter{熱}
     
     
