--- a/physics/analytical-mechanics.tex
+++ b/physics/analytical-mechanics.tex
@@ -10,25 +10,111 @@
 
     \tableofcontents
 
-    \chapter{解析力学とは}
-        \section{解析力学という学問}
+    \chapter{オーバービュー}
+        \section{解析力学とは}
             ここは後々書くヲ（ニュートン力学との違いを中心に）
-            
 
     \chapter{最小作用の原理とラグランジュ形式}
         \section{一般化座標と一般化運動量}
-        \section{最小作用の原理}
-        \section{変分法}
-        \section{オイラー＝ラグランジュ方程式}
-        \section{ラグランジュの未定乗数法}
+            解析力学では、\textbf{一般化座標$q_i(t)$}と\textbf{一般化運動量$p_i(t)$}の２つをもとに理論が形成されている。
+            この一般化というのは、任意性を持つというニュアンスの接頭辞である。
+            つまり、デカルト座標（xyz座標）のようなものに限定されず、任意の座標系について統一的に考えることができるということである。\par
+            この後に\textbf{オイラー＝ラグランジュ方程式}という解析力学における基礎方程式を導入するが、その方程式では一般化座標と一般化運動量を用いて運動方程式を記述することになる。
+            これにより、\textbf{どのような座標系を選択しても、同一の形の方程式で計算をすることができる}という強みを持つ。
+
+        \section{最小作用の原理とラグランジアン}
+            $N$個の独立な力学変数$q_i(t)(i=1,2, ..., N)$で記述される$N$自由度系を考える。
+            この時、以下のように\textbf{ラグランジアン}という量を定義する。
+            \begin{equation}
+                L = L(q(t), \dot{q}(t), t)
+            \end{equation}
+            \begin{align}
+                q(t) &= (q_1(t), q_2(t), ..., q_N(t)) \\
+                \dot{q}(t) &= (\dot{q}_1(t), \dot{q}_2(t), ..., \dot{q}_N(t))
+            \end{align}
+            ちなみに、このラグランジアンは直接的に$t$という引数を持つことから、\textbf{陽の時間依存性}を持つという。
+            陽な時間依存性を持たなければ、一般化座標と一般化運動量のみでラグランジアンが表せるということになる。\par
+            さて、ここで以下のような\textbf{作用$S$}という量を導入する。
+            \begin{equation}
+                S[q] = \int_{t_1}^{t_2} L(q(t), \dot{q}(t), t) dt
+            \end{equation}
+            この時、系の運動は$S[q]$が最小になる（\textbf{停留}する）ように決定される。
+            これを\textbf{最小作用の原理}という。
+            つまり、どのように運動をするのか（どのような経路を辿って運動するのか）は、この作用$S$によって決まる。
+
+        \section{変分法とオイラー＝ラグランジュ方程式}
+            では、作用$S$が最小になるような経路を求めるためにはどうすればよいか。\par
+            まず、$q(t)$から微少量ずれた経路$q(t) + \delta q(t)$を考える。この時の作用の変化量$\delta S[q]$は、$\delta$の2次以上の項を無視し、テイラー展開などを行うことで、
+            \begin{align}
+                \delta S[q] &= S[q + \delta q] - S[q] \\
+                &= \int_{t_1}^{t_2} \left( L(q + \delta q, \dot{q} + \delta \dot{q}, t) - L(q, \dot{q}, t) \right) dt \\
+                &= \int_{t_1}^{t_2} dt \left( \frac{\partial L}{\partial q} - \frac{d}{dt} \frac{\partial L}{\partial \dot{q}} \right) \delta q
+            \end{align}
+            と計算できる。
+            行間が大分省略されているが、ご愛嬌ということで。
+            ここで、$\delta S[q]$は極値付近（今回は最小付近）の時、変化が緩やかになることから、$\delta S[q] = 0$となると考えるのが自然である。
+            つまり、最小作用の原理を満たすような方程式として、
+            \begin{equation}
+                \frac{\partial L}{\partial q} - \frac{d}{dt} \frac{\partial L}{\partial \dot{q}} = 0
+            \end{equation}
+            が得られ、これを\textbf{オイラー＝ラグランジュ方程式}という。
+            さらに、このように微小変化に対する応答（\textbf{変分$\delta S[q]$}）が$0$になるような条件で議論を進める手法を\textbf{変分法}という\par
+            アインシュタインの縮約ルールに基づいた表記としては、
+            \begin{equation}
+                \frac{\partial L}{\partial q_i} - \frac{d}{dt} \frac{\partial L}{\partial \dot{q_i}} = 0
+            \end{equation}
+            となる。
+
         \section{ラグランジアンの不定性}
+            任意関数$G(q(t), t)$について、
+            \begin{equation}
+                L'(q(t), \dot{q}(t), t) = L(q(t), \dot{q}(t), t) + \frac{d}{dt} G(q(t), t)
+            \end{equation}
+            というラグランジアン$L'$を考える。
+            この$L'$はオイラー＝ラグランジュ方程式において$L$と全く同じ解を与える。
+            つまり、$L$と$L'$は等価であるといえる。
+            これは変分法により、2つのラグランジアンの変分を比較することで示すことができる。
+            この性質がラグランジアンの適用範囲を広げることになる。
+
+        \section{ラグランジュの未定乗数法}
 
     \chapter{対称性と保存則}
         \section{時間並進の対称性}
+            時間並進とは、時間を定数分だけずらすような操作のことである。
+            そこで、
+            \begin{equation}
+                t \to t + t_0
+            \end{equation}
+            のように変更した場合に、ラグランジアンがどのように応答するかを考える。
+            この時、ラグランジアンが陽の時間依存性を持たない場合、$q(t+t_0)$も元のオイラー＝ラグランジュ方程式の解になる。
+            つまり、どちらの運動も同じラグランジアンで表すことができるということである。\par
+            逆に、ラグランジアンが陽の依存性を持つ（＝$t$に直接的に依存する）場合、受ける力などが変わってくるため、運動の仕方に違いが生じることは明らかである。
+            そのため、同じラグランジアンで表すことができないことは直感的にも理解できる。
+
         \section{空間並進の対称性}
+            空間並進とは、空間座標を一様にずらすような操作のことである。
+            「一様に」というのは、座標全体を一定分だけという意味である。
+            そこで、
+            \begin{align}
+                q(t) &\to q(t) + q_0 \\
+                \dot{q}(t) &\to \frac{d}{dt} ({q(t)} + q_0) = \dot{q}(t)
+            \end{align}
+            のように変更した場合に、ラグランジアンがどのように応答するかを考える。
+            この時、ざっくりとして表現にはなるが、空間に一様性があれば$q(t) + q_0$も元のオイラー＝ラグランジュ方程式の解になる。
+            ここでいう空間の一様性というのは、\textbf{座標に依存するような場に関するパラメータが含まれていない}という意味である。
+            もちろん場に依存するするようなパラメータが存在するのであれば、働く力などが変わってくることは容易に想像することができる。
+
+
         \section{空間回転の対称性}
         \section{ガリレイ不変性}
-        \section{Noetherの定理}
+        \section{ネーターの定理}
+            先ほどまでの対称性についての議論を踏まえて、保存則について考える。
+            一つの重要な定理として、\textbf{ラグランジアンが対称性を持っている場合、それに対応した保存量が存在する}。
+            これを\textbf{ネーターの定理}という。
+            つまり、時間並進の対称性を持つ場合、それに対応して何かしらの保存量が存在する。
+            これが他の対称性についても成り立つということである。
+            対称性の議論から保存則が導出できるということである。
+
         \section{エネルギー保存則}
         \section{運動量保存則}
         \section{角運動量保存則}
