--- a/physics/thermodynamics.tex
+++ b/physics/thermodynamics.tex
@@ -10,8 +10,8 @@
 
     \tableofcontents
 
-    \chapter{熱力学とは}
-        \section{熱力学という学問}
+    \chapter{オーバービュー}
+        \section{熱力学とは}
         このPDFがあらかた完成してから書くと思う
             
         \section{熱力学的現象の見方}
