--- a/physics/analytical-mechanics.tex
+++ b/physics/analytical-mechanics.tex
@@ -77,6 +77,7 @@
             この性質がラグランジアンの適用範囲を広げることになる。
 
         \section{ラグランジュの未定乗数法}
+            いつか書く
 
     \chapter{対称性と保存則}
         \section{時間並進の対称性}
@@ -104,25 +105,95 @@
             ここでいう空間の一様性というのは、\textbf{座標に依存するような場に関するパラメータが含まれていない}という意味である。
             もちろん場に依存するするようなパラメータが存在するのであれば、働く力などが変わってくることは容易に想像することができる。
 
-
         \section{空間回転の対称性}
+            空間回転とは、空間座標を原点を中心として回転させるような操作のことである。
+            空間回転については、行列式の値が$1$になる回転行列$R$を左から作用させて、
+            \begin{equation}
+                q(t) \to Rq(t)
+            \end{equation}
+            となり、これによりラグランジアンがどのように応答するのかを考える。
+            この際、\textbf{方向に依存した変化がなければ、空間回転に対して対称性を持つ}ことが分かる。
+            例えば、$3$次元空間で$x$軸方向のみに力が働いているような系の場合、空間回転させてしまうと系に対する力の働く向きが変わってしまうため、空間回転に対しては対称ではない。
+            返って、中心力による束縛のような系では、空間回転しても分からないため、これは空間回転に対して対称であるといえる。
+
         \section{ガリレイ不変性}
         \section{ネーターの定理}
             先ほどまでの対称性についての議論を踏まえて、保存則について考える。
-            一つの重要な定理として、\textbf{ラグランジアンが対称性を持っている場合、それに対応した保存量が存在する}。
+            一つの重要な定理として、\textbf{ラグランジアンが対称性を持っている（=不変である）場合、それに対応した保存量が存在する}。
             これを\textbf{ネーターの定理}という。
             つまり、時間並進の対称性を持つ場合、それに対応して何かしらの保存量が存在する。
             これが他の対称性についても成り立つということである。
-            対称性の議論から保存則が導出できるということである。
+            対称性の議論から保存則が導出できるということである。\par
+            ではこれを数式で追ってみたい。
+            保存量$Q$は陽な時間依存性を持たないことから以下のように表される。
+            \begin{equation}
+                \frac{d}{dt}Q(q, \dot{q}) = 0
+            \end{equation}
+            ここで、対称性の議論の部分でも行ったような微小変換を、より一般化した場合で考えたい。
+            微小変換を表現する量を$F_i^A(q, \dot{q})$として、
+            \begin{align}
+                q_i(t) &\to q_i(t) + F_i^A(q, \dot{q}) \epsilon_A \\
+                \dot{q_i}(t) &\to \dot{q_i}(t) + \frac{d}{dt} F_i^A(q, \dot{q}) \epsilon_A
+            \end{align}
+            これに対してラグランジアンがどのように応答するのかを考えるために、$\delta L$を計算すると、
+            \begin{align}
+                \delta L &= \frac{d}{dt} \frac{\partial L(q, \dot{q}, t)}{\partial \dot{q}} F_i^A \\
+                &= \frac{d}{dt} Y^A(q, \dot{q}, t) \epsilon_A \\
+                &= 0
+            \end{align}
+            ここから保存量$Q^A$は、
+            \begin{equation} \label{eq:3a}
+                Q^A = \frac{\partial L(q, \dot{q}, t)}{\partial \dot{q}} F_i^A(q, \dot{q}) - Y^A(q, \dot{q}, t)
+            \end{equation}
+            で与えられる。
+            これにより、\textbf{どのように微小変換させるのか}を表す$F_i^A$と\textbf{ラグランジアンの変分}を表す$\delta L$を求めれば、保存量を導出することができることがわかる。
 
         \section{エネルギー保存則}
+            3.1節で考えた、時間並進の対称性について、ネーターの定理を適用する。
+            \begin{align}
+                q_i(t) &\to q_i(t + \epsilon_0) = q_i(t) + \dot{q_i}(t)\epsilon_0 \\
+                \dot{q_i}(t) &\to \dot{q_i}(t + \epsilon_0) = \dot{q_i}(t) + \ddot{q_i}(t)\epsilon_0
+            \end{align}
+            まず、ラグランジアンの変分は、全微分を計算することで、
+            \begin{equation}
+                \delta L = \frac{d}{dt} L(q, \dot{q})\epsilon_0
+            \end{equation}
+            ネーターの定理(\ref{eq:3a})式との対応関係を考えると、
+            \begin{equation}
+                E = \frac{\partial L(q, \dot{q})}{\partial \dot{q_i}} \dot{q_i} - L(q, \dot{q})
+            \end{equation}
+            という保存量$E$を得ることができ、これは一般に\textbf{エネルギー}と呼ばれるものである。
+            つまり、\textbf{時間並進について対称（ラグランジアンが不変）の場合、エネルギー保存則が成り立つ}ということである。
+            後に出てくるが、これはハミルトニアンの定義式と全く同じ式をしている。
+
+
         \section{運動量保存則}
         \section{角運動量保存則}
 
     \chapter{ハミルトン形式}
+        \section{ハミルトニアン}
+        ラグランジアンのルジャンドル変換で得られる
+        \section{ハミルトンの運動方程式}
+        最小作用の原理からも導出可能
+        \section{ハミルトニアンの時間微分}
+        \section{位相空間軌跡}
+        \section{ポアソンブラケット}
+
 
     \chapter{正準変換}
-
+        \section{ルジャンドル変換}
+        \section{正準変換}
+        \section{母関数$F(q, Q, t)$における正準変換}
+        \section{母関数$\Phi(q, P, t)$における正準変換}
+        \section{母関数$\Psi(q, Q, t)$における正準変換}
+        \section{母関数$\Xi(q, Q, t)$における正準変換}
+        \section{ラグランジュブラケット}
+        \section{正準変換とブラケット}
+        \section{微小正準変換}
+        \section{正準変換の群構造}
     \chapter{ハミルトン＝ヤコビ理論}
+
+    \chapter{解析力学の応用}
+        \section{リウヴィルの定理}
 
 \end{document}
