--- a/physics/thermodynamics.tex
+++ b/physics/thermodynamics.tex
@@ -12,7 +12,8 @@
 
     \chapter{オーバービュー}
         \section{熱力学とは}
-        このPDFがあらかた完成してから書くと思う
+        このPDFがあらかた完成してから書くと思う。
+        
             
         \section{熱力学的現象の見方}
 
